More alignment fixes

--- a/src/instruments/src/ISIS/style.scss
+++ b/src/instruments/src/ISIS/style.scss
@@ -101,6 +101,11 @@
   	stroke: none;
 }
 
+.TextWhite {
+	fill: $display-white;
+  	stroke: none;
+}
+
 .FillBackground {
 	fill: $display-background;
 }
